Fix weird gap in list-views

--- a/src/main/resources/assets/railroad/styles/base.css
+++ b/src/main/resources/assets/railroad/styles/base.css
@@ -30,6 +30,7 @@
 
 .list-cell {
     -fx-background-color: -color-bg-overlay;
+    -fx-cell-size: 40;
 }
 
 .list-cell:hover {
